# TPI

./: CMakeLists.txt  auxiliares.cpp  auxiliares.h  definiciones.h  ejercicios.cpp  main.cpp
